# MFE-Driverless-V1

./: Dockerfile  README.md  run_image.bash
install/: setup.sh
install/articubot_one/share/articubot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mfe/share/mfe/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mfe_base/share/mfe_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mfe_bringup/share/mfe_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  (+3 more)
log/: latest_build
ros2/: structure.txt
ros2/src/mfe/: CMakeLists.txt
ros2/src/mfe_base/: CMakeLists.txt
ros2/src/mfe_bringup/: CMakeLists.txt  package.xml
ros2/src/mfe_mapping/: CMakeLists.txt
ros2/src/mfe_msgs/: CMakeLists.txt  package.xml
ros2/src/mfe_navigation/: CMakeLists.txt  package.xml
ros2/src/mfe_path_planning/: CMakeLists.txt  package.xml
ros2/src/mfe_perception/: CMakeLists.txt  package.xml
ros2/src/mfe_perception/lidar_cone_detector/: CMakeLists.txt  cone_detection.py  package.xml
ros2/src/mfe_perception/lidar_cone_detector/include/lidar_cone_detector/: ground_plane_removal.hpp
ros2/src/mfe_perception/lidar_cone_detector/launch/: lidar_bringup.xml
ros2/src/mfe_perception/lidar_cone_detector/src/: ground_plane_removal.cpp
ros2/src/mfe_simulation/: CMakeLists.txt
ros2/src/mfe_tests/: README.md
(+180 files in other folders)
